feat(blog): add locale and format for date presentation in config (#259)
In order to let other GDG configure how date should be displayed, I've add in configuration the locale (default to en-US) and a parameter to be used in the `toLocaleString` on a Date Object (https://developer.mozilla.org/fr/docs/Web/JavaScript/Reference/Objets_globaux/Date/toLocaleString).

Closes #258

--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -28,6 +28,10 @@
     "url": "https://gdg.us11.list-manage.com/subscribe/post?u=b7e853a79164ddfdbda3ed77b&amp;id=7993e39fbe",
     "name": "b_b7e853a79164ddfdbda3ed77b_7993e39fbe"
   },
+  "dateFormat": {
+    "locale": "en-US",
+    "blog": {"month": "short", "day": "numeric", "year": "numeric"}
+  },
   "hashtag": "dfua",
   "disqusShortName": "hoverboard-gdg-x",
   "tweetsSource": "/data/tweets.json",
