customized hoverboard to wrok on cs3-workshop github account

--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://hoverboard.firebaseapp.com/",
+  "url": "https://cs3-krakow-2018.firebaseio.com",
   "startDate": "2016-09-09T09:00:00+03:00",
   "endDate": "2016-09-10T19:00:00+03:00",
   "analytics": {
@@ -16,10 +16,10 @@
     "backgroundColor": "#F57C00"
   },
   "firebase": {
-    "name": "hoverboard-experimental",
-    "domain": "hoverboard-experimental.firebaseapp.com",
-    "database": "https://hoverboard-experimental.firebaseio.com",
-    "api": "AIzaSyALDa2D7CMhK_wt2VkET1MaJuQXYVUJd2I",
+    "name": "cs3-krakow-2018",
+    "domain": "cs3-krakow-2018.firebaseapp.com",
+    "database": "https://cs3-krakow-2018.firebaseio.com",
+    "api": "AIzaSyCfbfqRhlrrjlZKN_gqqQ0GUIxPKACjtnY",
     "userSessionsPath": "/userSessions",
     "ratingsPath": "/ratings",
     "indexedDbSession": "hoverboard"
